Translate the existing lectures into english

--- a/1.0-basic-elements.ipynb
+++ b/1.0-basic-elements.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Създаваме граф. В графът се описват операциите, които ще се изпълняват от TF."
+    "We create a graph. A graph contains the operations that will be executed in TF."
    ]
   },
   {
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Задаваме графът по подразбиране в рамките на `with` секцията. Всяка операция, дефинирана в нея, е част от графът по подразбиране."
+    "We set the graph as the default one in the `with` scope. Each tensor (operation, placeholder, etc.) becomes part of our graph if executed within that scope."
    ]
   },
   {
@@ -50,16 +50,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`a` и `b` са placeholders(\"запазени места\") за стойности. При изчисление ще им бъдат присвоени стойнисти. За разлика от тях `c` и `d` са операции (`tf.Operation`). Те имат стойности, зависещи на други тензори (запазени места, операции и др.) и могат да бъдат произволно сложни.\n",
+    "`a` and `b` are value placeholders. During evaluation we'll pass them their values. `c` and `d` are operations (`tf.Operation`). They have values dependent on other tensors and can be arbitrary complex.\n",
     "\n",
-    "Всеки placeholder си има тип (tf.int32) и \"форма\" ([]), които трябва да бъдат спазени при подаването на стойности в тях. Обикновено се ползват `tf.int32` за целочислени (например бройки, части от форми на тензори и стойности на дискретни полеат) и `tf.float32` за реални числа (изчисленията с тях са по-бързи и не ни се налага да ползваме точността на `tf.float64` (double).   "
+    "Each tensor (including placeholders) has a type (tf.int32) and shape ([]). When passing values for placeholders we MUST pass values with that type and compatible shape. Usually we use `tf.int32` for integer  tensors (e.g. counts, tensor shape components and discreete values) and `tf.float32` for real numbers (computations are faster (espetially on GPU and vectorized compilations) and we don't need the extra precission in `tf.float64` (double)).   "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Създаваме си сесия. Всички операции в TF се изпълняват във дадена сесия. Всяка сесия си има граф, чиито операции изпълнява."
+    "We create a session. Every operation ins executed within a session and each session has a graph defining the operations that will be executed."
    ]
   },
   {
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Чрез `run` метода можем да изчисляваме тензори в рамките на графа."
+    "We can use the `run` method to compute the values of tensors within the graph."
    ]
   },
   {
@@ -100,9 +100,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Естествено не можем да изчислим `c` без да знаем стойностите на `a` и `b`. За целта трябва да подадем втория параметър на `run` - `feed_dict`. Той има стойност `dict` с ключове `placeholder` и стойности - стойностите, които съответния `placeholder` получава.\n",
+    "Obviously we cant compute `c` without passing values for `a` and `b`. To do this we have to pass the second parameter of `run` - `feed_dict`. It can be a `dict` with keys `placeholder`s and values - the value the we want to pass into the coresponding `placeholder`.\n",
     "\n",
-    "Освен това е добра идея да си именуваме тензорите, тъй като в съобщението за грешка пише кой `placeholder` липсва ;)."
+    "By the way every tensor has a name and it's a good idea to pass a meaningful one when debugging. This way we can figure out which `placeholder` doesn't have a value."
    ]
   },
   {
@@ -118,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Можем да подадем само стойностите на placeholder-ите, които използваме"
+    "We can pass values only for the `placeholder`s we use in our computation."
    ]
   },
   {
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Резултатът не е задължително да бъде единствен тензор. Може да бъде вложена структура от тензори използвайки `list` и `dict`"
+    "We thing we evaluate doesn't have to be a single tensor. It can be a nested structur of `list`s and `dict`s."
    ]
   },
   {
