--- a/1.1-variables.ipynb
+++ b/1.1-variables.ipynb
@@ -50,16 +50,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Добре, че си именовахме променливата ;)\n",
+    "Naming our variable was a good call ;)\n",
     "\n",
-    "Създаването на променливи е част от задаването на графа. Ние създадохме променлива `a` със стойност при инциализиране 72, но не сме я инициализирали в ракмките на сесията. Стойностите на променливите са част от сесията, а не от графа."
+    "The creation of variables is part of the graph definition. We created a variable `a` with initialization value 72, but we haven't initialized the variable in our session. The value of the variables is part of the session, not the graph!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Създаваме операция, която инициализира всички променливи в графа."
+    "We create an operation that initializes all variables in our graph."
    ]
   },
   {
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Операцията `init` не е част от графа? Това е, защото тази инциализация не е част от нашия граф."
+    "`init` is not part of the graph? We didn't said it is!"
    ]
   },
   {
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "За да променяме стойността на `a` ние добавяме `tf.assign` операция, която действа горе-долу логично."
+    "In order to change the variable `a` we add a self-describing `tf.assign` operation."
    ]
   },
   {
@@ -147,6 +147,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "session.run(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session.run(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "session.run(add_3_to_a)"
    ]
   },
@@ -172,25 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Забележете, че операцията `add_3_to_a` не се изпълнява, когато само извикваме стойността на `a`. Това е, защото не се изпълява целия граф, а само частта от него, която е нужна за изчисление на резултата, който искахме (по подбна причина в предния notebook, за да изчислим 2 * `a` не ни трябваше `b`)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "session.run([a, add_3_to_a, a])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Интересно? Защо не получаваме стойността на `a` преди и след събирането?\n",
-    "\n",
-    "Защото по никакъв начин не сме си подредили операциите в графа, и изчислението на всяка операция става в произволно време (например след добавянето на 3)"
+    "Note that `add_3_to_a` is not computed when we just try to get the value of `a`. That's because TF doesn't evaluate the whole graph. It just evaluates the subgraph we need to compute the desired value (similarly in the previous notebook, we didn't need `b` to compute 2 * `a`)."
    ]
   }
  ],
