--- a/2.1-more_machine_learning_with_tf.ipynb
+++ b/2.1-more_machine_learning_with_tf.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "def convolutional_layer(inp, output_channels, scope_name):\n",
     "    # We want to get the number of channels in `inp`\n",
-    "    # `get_shape` return a list, describing the static shape of `inp`\n",
+    "    # `get_shape` return a tf.TensorShape, describing the static shape of `inp`\n",
     "    # and the last element of it is the number of channels\n",
     "    input_channels = inp.get_shape().as_list()[-1]\n",
     "    # The kernel shape is [kernel_height, kernel_width, input_channels, output_channels]\n",
@@ -64,10 +64,29 @@
     "        bias = tf.get_variable('bias', [output_channels], initializer=tf.zeros_initializer())\n",
     "    # Strides tells TF the location of the next kernel center relative to the current.\n",
     "    # Padding tells TF how to behave near the edges of the image \n",
-    "    # **TODO** add images describing strides and padding\n",
+    "    # More info about the strides and padding can be found in http://deeplearning.net/software/theano/tutorial/conv_arithmetic.html\n",
     "    processed = tf.nn.conv2d(inp, kernel, strides=[1, 2, 2, 1], padding='VALID') + bias\n",
     "    return tf.nn.leaky_relu(processed)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Static shape vs Dynamic shape\n",
+    "Each tensor has a shape. When we define variables we have to fully define that shape, but when we define placeholders we can omit some of dimentions of the shape (like the batch size dimention). The definition shape is the *static* shape of the tensor. We get the static shape of a tensor with the `get_shape` method. Operations get their shape based on their operands.\n",
+    "\n",
+    "When we pass the placeholders and we actually compute the tensors, they have a fully-defined shape without `None` dimentions. We call that shape the *dynamic* shape. We can get the dynamic shape using the `tf.shape` function. That shape is useful in some circumstances, but in our case we need the static shape, because we want to compute the static shape of the kernel. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variable sharing\n",
+    "\n",
+    "Using `variable_scope` and `get_variable` is referred in TF as variable sharing. We use them to define our reusable layers, because we don't have to explicitly return and store the variables used in the layers, and they get meaningful names in the graph. "
    ]
   },
   {
@@ -93,8 +112,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hidden_layer_1 = convolutional_layer(image, 4, 'conv_1')\n",
+    "hidden_layer_1 = convolutional_layer(image, 4, 'conv_1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This creates two variables `conv_1/kernel` for our kernel and `conv_1/bias` for the bias. If we need them we can get them in a simialar way (with `variable_scope` and `get_variable` but we must pass `reuse=True/tf.AUTO_REUSE` to `variable_scope`)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "hidden_layer_2 = convolutional_layer(hidden_layer_1, 8, 'conv_1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That reuse machanism is a good way to prevent copy/paste errors if we forget to rename our layer scopes."
    ]
   },
   {
@@ -123,7 +164,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flattened_hidden_layer_3 = tf.reshape(hidden_layer_3, [-1, 2 * 2 * 16])"
+    "max_pooled_layer_3 = tf.nn.max_pool(hidden_layer_3, \n",
+    "                                    ksize=[1, 2, 2, 1], # how big are our pooling windows (kernels)\n",
+    "                                    strides=[1, 2, 2, 1], # has the same meaning as tf.nn.conv2d\n",
+    "                                    padding='VALID', # has the same meaning as tf.nn.conv2d\n",
+    "                                   )\n",
+    "print(max_pooled_layer_3.get_shape())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flattened_hidden_layer_3 = tf.reshape(max_pooled_layer_3, [-1, 16])"
    ]
   },
   {
@@ -133,6 +188,13 @@
    "outputs": [],
    "source": [
     "logits = tf.layers.dense(flattened_hidden_layer_3, 10, name='final_layer')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The dense layer is the same as the linear model used in the previous notebook. The only difference (used here, since `tf.layers.dense` has a lot of options) is that it's defined as a layer with `variable_scope` and `get_variable`. Implementing a linear layer using variable sharing is left as an exercise to the reader."
    ]
   },
   {
@@ -167,6 +229,13 @@
     "global_step = tf.Variable(0, trainable=False, dtype=tf.int32, name='global_step')\n",
     "optimizer = tf.train.AdamOptimizer(1e-3)\n",
     "train_op = optimizer.minimize(loss, global_step=global_step)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`AdamOptimizer` implements a variant of stochastic gradient descent, that behaves better in various contexts: sparse variables, saddle points, etc. and is known for fast convergence, but sadly even though it's advertised to not need learning rate tuning it's still sensitive to it."
    ]
   },
   {
@@ -233,6 +302,13 @@
    "outputs": [],
    "source": [
     "session.run(predicted_label_probs, {image: mnist.train.images[0:1]})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since our model expects a 28x28 1 channel images we have to reshape our input. If our images where of different sizes we would have to resize them or make our model handle images with different sizes."
    ]
   },
   {
@@ -363,6 +439,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To save our mode we use `tf.train.Saver`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -372,12 +455,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "saver.save(session, 'saved_model/model.ckpt')"
+    "With the `save` method we pass a session and a path for saving the model. Usually we want to pass a `global_step` parameter, so we can save every few thousand steps and still know which model is more trained than others. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A big downside is that our model consists of 3 types of files:\n",
+    " - `.data-#####-of-#####` files, that contains the tensor values (currently we have only one such file).\n",
+    " - `.index` file, that contains tensor metadata: what tensors do we have in our data files, in which files at which offset, checksums, etc.\n",
+    " - `.meta` file, that describes our graph's structure if we don't want to build it in our source. Since we build the graph in the source we don't need it (for our usecase) and we can disable it's generation with `write_meta_graph=False`\n",
+    "\n",
+    "More info can be found in [this SO thread](https://stackoverflow.com/questions/41265035/tensorflow-why-there-are-3-files-after-saving-the-model)"
    ]
   },
   {
@@ -386,7 +479,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "saver.restore(session, 'saved_model/model.ckpt')"
+    "saver.save(session, 'saved_model/model.ckpt', global_step=global_step_value, write_meta_graph=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saver.restore(session, '...')"
    ]
   }
  ],
