--- a/2.0-machine_learning_with_tf.ipynb
+++ b/2.0-machine_learning_with_tf.ipynb
@@ -244,7 +244,7 @@
    "source": [
     "We define our model computation. There are a number of caveats here. \n",
     "\n",
-    "First is the `matmul`. We all know matrix multiplication is not cumulative. It's not even defined if we swap the places  of its operands. A good rule of thumb for `{tf,np}.matmul` is that you can multiply arrays/tensors with shapes `[a,b]` by arrays/tensors with shapes `[b,c]` and get shapes `[a,c]` (you must pass the same \"middle shape size\").\n",
+    "First is the `matmul`. We all know matrix multiplication is not commutative. It's not even defined if we swap the places  of its operands. A good rule of thumb for `{tf,np}.matmul` is that you can multiply arrays/tensors with shapes `[a,b]` by arrays/tensors with shapes `[b,c]` and get shapes `[a,c]` (you must pass the same \"middle shape size\").\n",
     "\n",
     "The second one is the addition. The multiplication result has shape `[batch_size, 10]`, but the bias has shape `[10]`. Actually we can add them directly because the bias shape will autobroadcast to `[1, 10]`, because they have different rank (and the rank is padded on the left). After that the shape component is broadcasted from `1` to `batch_size` automatically by TF. What we've done is to explicitly make them of equal rank and then broadcast only the `batch_size` value. Note that not all operations broadcast the shapes! [More info on broadcasting](https://docs.scipy.org/doc/numpy-1.13.0/user/basics.broadcasting.html). TF broadcasting is more or less the same as np."
    ]
@@ -513,7 +513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
