Add flushes to summary writers, add training loop for the conv and add summary_logdir to .gitignore.

--- a/2.1-more_machine_learning_with_tf.ipynb
+++ b/2.1-more_machine_learning_with_tf.ipynb
@@ -335,36 +335,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Train for one epoch\n",
-    "batch_size = 10\n",
-    "summaries_op = tf.summary.merge_all()\n",
-    "for batch_start in range(0, mnist.train.images.shape[0], batch_size):\n",
-    "    # Get the corresponding batches for images and labels\n",
-    "    image_batch = mnist.train.images[batch_start:batch_start + batch_size].reshape([-1, 28, 28, 1])\n",
-    "    label_batch = mnist.train.labels[batch_start:batch_start + batch_size]\n",
-    "    \n",
-    "    # Execute one step of the model. Note that train_op doesn't have a value, but it **HAS** to be executed\n",
-    "    # in order to train the model\n",
-    "    global_step_value, loss_value, accuracy_value, summaries_value, _ = session.run(\n",
-    "        [global_step, loss, accuracy, summaries_op, train_op],\n",
-    "        {image: image_batch, gt_label: label_batch}\n",
-    "    )\n",
-    "    if global_step_value % 100 == 0:\n",
-    "        # Print the loss and accuracy of the model on the *Trainng* *batch*\n",
-    "        print(\"{:6}: loss: {}, accuracy:{} \".format(global_step_value, loss_value, accuracy_value))\n",
-    "        summary_writer.add_summary(summaries_value, global_step_value)\n",
-    "    if global_step_value % 1000 == 0:\n",
-    "        # Compute the loss and accuracy on the whole *Validation* set. \n",
-    "        # Note 0: usually the validation set will be too big to compute validations on the whole set\n",
-    "        # Note 1: there is no `train_op` in the tensors we pass to run, so the model doesn't learn \n",
-    "        #   anything from the validation set (this would be bad)\n",
-    "        global_step_value, loss_value, accuracy_value, summaries_value = session.run(\n",
-    "            [global_step, loss, accuracy, summaries_op],\n",
-    "            {image: mnist.validation.images.reshape([-1, 28, 28, 1]), \n",
-    "             gt_label: mnist.validation.labels}\n",
+    "for _ in range(5):\n",
+    "    # Train for one epoch\n",
+    "    batch_size = 10\n",
+    "    summaries_op = tf.summary.merge_all()\n",
+    "    for batch_start in range(0, mnist.train.images.shape[0], batch_size):\n",
+    "        # Get the corresponding batches for images and labels\n",
+    "        image_batch = mnist.train.images[batch_start:batch_start + batch_size].reshape([-1, 28, 28, 1])\n",
+    "        label_batch = mnist.train.labels[batch_start:batch_start + batch_size]\n",
+    "\n",
+    "        # Execute one step of the model. Note that train_op doesn't have a value, but it **HAS** to be executed\n",
+    "        # in order to train the model\n",
+    "        global_step_value, loss_value, accuracy_value, summaries_value, _ = session.run(\n",
+    "            [global_step, loss, accuracy, summaries_op, train_op],\n",
+    "            {image: image_batch, gt_label: label_batch}\n",
     "        )\n",
-    "        val_summary_writer.add_summary(summaries_value, global_step_value)\n",
-    "        print(\"VAL: {:6}: loss: {}, accuracy:{} \".format(global_step_value, loss_value, accuracy_value))\n"
+    "        if global_step_value % 100 == 0:\n",
+    "            # Print the loss and accuracy of the model on the *Trainng* *batch*\n",
+    "            print(\"{:6}: loss: {}, accuracy:{} \".format(global_step_value, loss_value, accuracy_value))\n",
+    "            summary_writer.add_summary(summaries_value, global_step_value)\n",
+    "            summary_writer.flush()\n",
+    "        if global_step_value % 1000 == 0:\n",
+    "            # Compute the loss and accuracy on the whole *Validation* set. \n",
+    "            # Note 0: usually the validation set will be too big to compute validations on the whole set\n",
+    "            # Note 1: there is no `train_op` in the tensors we pass to run, so the model doesn't learn \n",
+    "            #   anything from the validation set (this would be bad)\n",
+    "            global_step_value, loss_value, accuracy_value, summaries_value = session.run(\n",
+    "                [global_step, loss, accuracy, summaries_op],\n",
+    "                {image: mnist.validation.images.reshape([-1, 28, 28, 1]), \n",
+    "                 gt_label: mnist.validation.labels}\n",
+    "            )\n",
+    "            val_summary_writer.add_summary(summaries_value, global_step_value)\n",
+    "            val_summary_writer.flush()\n",
+    "            print(\"VAL: {:6}: loss: {}, accuracy:{} \".format(global_step_value, loss_value, accuracy_value))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Runs for 27.5k steps in a bit under 3 mins on my machine."
    ]
   },
   {
@@ -508,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
