Unify naming scheme

--- a/1.0-basic_elements.ipynb
+++ b/1.0-basic_elements.ipynb
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Dependency Graph](images/1.0-dependency-graph.svg)"
+    "![Dependency Graph](images/1.0-dependency_graph.svg)"
    ]
   },
   {
