--- a/1.0-basic_elements.ipynb
+++ b/1.0-basic_elements.ipynb
@@ -122,13 +122,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Dependency Graph](images/1.0-dependency_graph.svg)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -141,7 +134,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We thing we evaluate doesn't have to be a single tensor. It can be a nested structur of `list`s and `dict`s."
+    "![Dependency Graph](images/1.0-dependency_graph.svg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The thing we evaluate doesn't have to be a single tensor. It can be a nested structur of `list`s and `dict`s."
    ]
   },
   {
