Add `np.argmax` example

--- a/lecture-5/0.1-ndarray_intro.ipynb
+++ b/lecture-5/0.1-ndarray_intro.ipynb
@@ -371,7 +371,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "e = np.equal(np.array([1, 2, 3]), np.array([1, -2, 3]))\n",
+    "probs = np.array([\n",
+    "    [0.75, 0.25],\n",
+    "    [0.3, 0.7],\n",
+    "    [0.05, 0.95],\n",
+    "])\n",
+    "np.argmax(probs, axis=-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we have an array `prob` with shape `[num_examples, num_classes]`, where `prob[i]` is the probability distribution of the i-th example, `np.argmax` gives us the most probable class for each example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e = np.equal(np.array([0, 1, 1]), np.array([1, 1, 0]))\n",
     "e"
    ]
   },
@@ -414,13 +435,6 @@
    "source": [
     "...to get the number of places where two arrays match (that can be used for computing accuracy ;))."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
